0.6.0 (currently working on)
- [#1471] Change: Move the testing framework from tests/fixtures/ to the oelib main directory and rename it
- [#1454] Fix: Failing test: tx_seminars_categorybag_testcase::testBagCanHaveAtLeastOneElement
- [#1294] Fix: Installing seminars without FORMidable will break BE login
- [#354] Change: Make all links in the list view display:block
- [#1419] Feature: Add functions in the testing framework to create dummy FE pages and dummy system folders
- [#1418] Change: testingframework::resetAutoIncrement and ::countRecords should allow every existing table
- [#1424] Feature: Add classes: category, categorybag, categorybagbuilder
- [#1428] Change: Add tests for the bag class
- [#1426] Change: Add unit tests for objectfromdb
- [#1429] Fix: Failing test: testGetAdditionalQueryForCountryWithMultipleValidCountries
- [#1337] Change: Move the table names to constants
- [#1400] Feature: Create a seminarbag builder and move creating the WHERE clause for the list view out of pi1
- [#1404] Change: Make use of the oelib testing framework for creating Seminar Manager dummy records
- [#1389] Feature: Add categories in the BE
- [#1380] Feature: Add a wizard to tx_seminars
- [#1371] Feature: Add city to list view
- [#1381] Change: Change the way the CSS file is included
- [#634] Feature: Add time slots to the seminar records (FE)
- [#1046] Feature: Two-click registration
- [#1327] Feature: Add a column "status" to the "my events" list
- [#1266] Fix: Labels for buttons cannot be set via TS setup
- [#1316] Feature: In mod2 also show timed events
- [#1315] Feature: In tx_seminars_bag allow to ignore the timing of records
- [#1204] Feature: Added French translation by François Suter
- [#1095] Feature: Show the target groups in the list view and allow to sort by and search for them
- [#1180] Feature: Modify tx_seminars_objectfromdb::getRecordIcon() so it returns hidden and timed icons
- [#1314] Fix: tx_seminars_organizers.email shouldn't be an exclude field